# ur5e-ros2-gemini-pickplace

./: .gitignore  GEMINI_API.md  INSTALL.md  POLYSCOPE5_SETUP.md  README.md
.tf2_frames/: frames_2026-02-24_16.51.09.gv  frames_2026-02-27_13.18.21.gv  frames_2026-03-17_18.27.06.gv
brick_interfaces/: CMakeLists.txt  README.md  package.xml
brick_interfaces/msg/: LegoBrick.msg
brick_interfaces/srv/: DetectBricks.srv
color_detection/: README copy.md  README.md  package.xml  setup.py
color_detection/color_detection/: color_detector.py  color_detector_legacy.py  color_functions.py  hsv_tuner.py
color_detection/config/: hsv_bounds.yaml  real_parameters.yaml  real_params.yaml  (+4 more)
color_detection_msgs/: CMakeLists.txt  README.md  package.xml
color_detection_msgs/msg/: LegoBrick.msg
color_detection_msgs/srv/: DetectBricks.srv
descriptions/: README.md
gemini_robotics_er/: package.xml  setup.py
gemini_vision/: README.md  package.xml  setup.cfg  setup.py
local_vision/: README.md  package.xml  setup.cfg  setup.py
object_interfaces/: CMakeLists.txt  README.md  package.xml
ur_moveit_config/: .setup_assistant  package.xml
workcell/workcell_simulation/: README.md  package.xml  setup.cfg  setup.py
workcell/workcell_simulation/config/: moveit.rviz  realsense_d415_webots.urdf.xacro  ur5e_webots.ros2_control.xacro
workcell/workcell_simulation/launch/: simulation.launch.py
workcell/workcell_simulation/meshes/: pisoftgrip.stl  pisoftgrip_simplified_605_faces.stl
workcell/workcell_simulation/protos/: BrickContainer.proto  IntelRealSenseD415.proto  Klemmbaustein_4x2.proto
workcell/workcell_simulation/worlds/: .workcell.wbproj  .workcell_clutter.wbproj  workcell.wbt  workcell_clutter.wbt
workcell_moveit_config/: package.xml
(+146 files in other folders)
