<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>workcell_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="daneceni@gmail.com">daniel</maintainer>
  <license>Apache-2.0</license>

  <!-- Basis Abhängigkeiten -->
  <depend>rclpy</depend>
  
  <!-- Webots Abhängigkeiten -->
  <depend>webots_ros2_driver</depend>
  <depend>webots_ros2_control</depend>
  
  <!-- Control & Planung -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  
  <!-- Tools -->
  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
